[gd_scene load_steps=4 format=3 uid="uid://lxep3ksl50kt"]

[ext_resource type="Script" path="res://scripts/start.gd" id="1_b7l8h"]
[ext_resource type="FontFile" uid="uid://cb8u6mjec2gyf" path="res://assets/fonts/Old Fax.ttf" id="2_4tase"]
[ext_resource type="Texture2D" uid="uid://bnbme74jp3hij" path="res://assets/2024-09-21 10_39_07-zTower (DEBUG).png" id="3_suhv2"]

[node name="Start" type="CanvasLayer"]
script = ExtResource("1_b7l8h")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2574.0
offset_top = -1492.0
offset_right = 4870.0
offset_bottom = 3634.0
color = Color(0, 0, 0, 0.376471)

[node name="Label" type="Label" parent="."]
visible = false
offset_top = 325.0
offset_right = 1920.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("2_4tase")
theme_override_font_sizes/font_size = 48
text = "The Tower"
horizontal_alignment = 1

[node name="ButtonStart" type="Button" parent="."]
z_index = 1
offset_left = -279.0
offset_top = 126.0
offset_right = -271.0
offset_bottom = 134.0

[node name="LabelStart" type="Label" parent="ButtonStart"]
layout_mode = 0
offset_left = 824.0
offset_top = 715.0
offset_right = 2744.0
offset_bottom = 745.0
theme_override_fonts/font = ExtResource("2_4tase")
theme_override_font_sizes/font_size = 32
text = "Press ( E ) to Start"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -150.0
offset_top = -11.0
offset_right = 1977.0
offset_bottom = 1360.0
texture = ExtResource("3_suhv2")

[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
